download and host stt model

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
+# api
 fastapi
-torch
-transformers
 uvicorn
 python-multipart
+
+# inference
+torch
+transformers
+
+# audio processing
+ffmpeg
+ffmpeg-python
